# My_Pi_KVM_LCD_Serial

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  lifelinetty.service  roadmap.txt  seriallcd.service  spec.txt  tracker.txt
.github/: copilot-instructions.md
.github/instructions/: rust_api_surface.prompt.md  rust_bugfix.prompt.md  rust_ci.prompt.md  rust_docs.prompt.md  rust_feature.prompt.md  rust_mc_api.prompt.md  rust_mc_tests.prompt.md  rust_mc_ui.prompt.md  rust_perf.prompt.md  rust_project.prompt.md  rust_refactor.prompt.md  rust_release.prompt.md  rust_security.prompt.md
devtest/: dev.conf.example  dev_test_usage.md  run-dev.sh  watch-remote.sh  watch.sh
devtest/config/: lifelinetty.toml
docker/: Dockerfile.arm64  Dockerfile.armv6  Dockerfile.armv7  README.md
docs/: architecture.md  demo_playbook.md  dev_test_real.md  icon_library.md  lcd_features.txt  lcd_patterns.md  lifelinetty_creates.md  milestone_a.md  milestone_b.md  milestone_c.mc  milestone_c.md  milestone_d.md  milestone_e.md  milestone_f.md  milestone_g.md  releasing.md  roadmap.md  roadmap_frameworks.md  roadmap_skeletons.md
docs/Roadmaps/v0.2.0/: milestone_1.md  roadmap.md
packaging/deb/: postinst  postrm
samples/: payload_examples.json  payload_examples.old.json  payload_feeder.py  test_payload.json
scripts/: build_helpers.sh  local-release.sh
src/: app.rs  cli.rs  compression.rs  config.rs  lcd.rs  lib.rs  main.rs  payload.rs  serial.rs  serial_async.rs  state.rs
src/app/: connection.rs  demo.rs  events.rs  input.rs  lifecycle.rs  logger.rs  mod.rs  polling.rs  render_loop.rs  serial_shell.rs  wizard.rs
src/config/: loader.rs  mod.rs
src/display/: icon_bank.rs  lcd.rs  mod.rs  overlays.rs
src/lcd_driver/: external.rs  mod.rs  pcf8574.rs
src/milestones/: mod.rs
src/milestones/command_tunnel/: mod.rs
src/milestones/polling/: mod.rs
src/milestones/schema/: mod.rs
src/milestones/serialsh/: shell.rs
src/milestones/transfer/: mod.rs
src/payload/: icons.rs  mod.rs  parser.rs
src/serial/: async.rs  errors.rs  fake.rs  mod.rs  sync.rs  telemetry.rs
tests/: bin_smoke.rs  fake_serial_loop.rs  integration_mock.rs  pty_spawn.rs  test_build_helpers.sh  test_localrelease_paths.sh  test_makefile_paths.sh
tests/fixtures/config/: malformed.toml  partial.toml
