[package]
name = "lifelinetty"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LifelineTTY: serial terminal lifeline daemon and client."
repository = "https://github.com/macg4dave/LifelineTTY"

[features]
default = []
# Enable async serial when needed; off by default for minimal footprint.
async-serial = ["tokio-serial", "tokio"]
# P7: CLI integration groundwork uses a gated serial shell flag so
# experimental builds can opt in without affecting releases.
serialsh = []

[dependencies]
async-io = "2"
calloop = "0.14.3"
clap_complete = "4.5"
crossbeam = "0.8"
directories = "6.0.0"
futures = { version = "0.3.31", default-features = false }
hd44780-driver = "0.4"
humantime = "2"
indicatif = "0.18.3"
os_info = "3"
rustix = "1.1.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serialport = "4.3"
sysinfo = { version = "0.37.2", default-features = false }
syslog = "7.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tokio-serial = { version = "5.4", optional = true }
tokio-util = { version = "0.7", features = ["codec"] }
crc32fast = "1"
ctrlc = "3"
bincode = "2.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22.1", features = ["hal"] }
linux-embedded-hal = "0.4.1"

[package.metadata.deb]
maintainer = "David <macg4dave@gmail.com>"
depends = "libudev1, systemd"
assets = [
    ["target/release/lifelinetty", "/usr/bin/lifelinetty", "755"],
    ["lifelinetty.service", "/lib/systemd/system/lifelinetty.service", "644"],
    ["README.md", "/usr/share/doc/lifelinetty/README.md", "644"],
]
maintainer-scripts = "packaging/deb"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/lifelinetty", dest = "/usr/bin/lifelinetty", mode = "755" },
    { source = "lifelinetty.service", dest = "/usr/lib/systemd/system/lifelinetty.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/lifelinetty/README.md", mode = "644" },
]
post_install_script = """
systemctl daemon-reload >/dev/null 2>&1 || true
"""
post_uninstall_script = """
systemctl daemon-reload >/dev/null 2>&1 || true
"""

[package.metadata.generate-rpm.requires]
systemd = "*"

[dev-dependencies]
tempfile = "3"
